fix: Missing spaces in post titles
In post title links, `display: flex` was used with `align-items:
center` to vertically center the titles within the clickable (tappable)
link's area. This had the side effect of eliminating spaces around
elements inside the links.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -320,9 +320,8 @@ figure.original-size img {
     margin-bottom: 0;
 
     & a {
-        display: flex;
         min-height: var(--finger-size);
-        align-items: center;
+        line-height: var(--finger-size);
     }
 }
 
